@@ -1,3 +1,6 @@
+HEAD
+	+ bug fix: l7 filter rules need to be added to both external and internal
+	interfaces to be able to detect traffic properly
 1.1.20
 	+ fix regression introduced when firewall was changed to execute iptables command
 at once
